[package]
name = "jude"
version = "0.1.0"
edition = "2021"
description = "jude — HTTP load generator. Fast, zero-copy, Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vastar-AI/jude"
homepage = "https://github.com/Vastar-AI/jude"

[[bin]]
name = "jude"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
