[package]
name = "vastar"
version = "0.1.0"
edition = "2021"
description = "HTTP load generator. Fast, zero-copy, raw TCP. Alternative to hey, oha, wrk."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vastar-AI/vastar"
homepage = "https://github.com/Vastar-AI/vastar"
keywords = ["http", "benchmark", "load-testing", "performance"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["bench-server/", "benchmark.sh", "BENCHMARK.md"]

[[bin]]
name = "vastar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
